librechat/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: librechat
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3080
  selector:
    app: librechat-app
